compiler/tools/fpp-check/test/state_machine/types/action_undef_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/types/action_undef_type.fpp:3.13
  action a: T
            ^
error: symbol T is not defined
note: looking for a type here
